chore: go back to use openapi spec file
