# src/api/routes/vehicles.route.ts
@@ -1,16 +1,20 @@
-import { Static } from '@sinclair/typebox';
 import { Request, Response, Router } from 'express';
-import { VehiclesSearchByVinResponseBodySchema } from 'src/api/openapi/schemas/vehicles.schema';
+import { components, paths } from 'src/api/types/openapi';
 
-type VehiclesSearchByVinRequest = Request<unknown, unknown, unknown, { vin: string }>;
-type VehiclesSearchByVinResponse = Response<Static<typeof VehiclesSearchByVinResponseBodySchema>>;
+type VehiclesSearchByVinRequest = Request<
+	unknown,
+	unknown,
+	unknown,
+	paths['/vehicles/search/by-vin']['get']['parameters']['query']
+>;
+type VehiclesSearchByVinResponse = Response<components['schemas']['VehiclesSearchByVinResult']>;
 
 export const createVehiclesRoutes = async () => {
 	const router = Router();
 
 	router.get('/vehicles/search/by-vin', (req: VehiclesSearchByVinRequest, res: VehiclesSearchByVinResponse) => {
 		res.json({
-			VIN: '1HGCM82633A123456',
+			vin: '1HGCM82633A123456',
 			makeId: 448,
 			make: 'Toyota',
 			modelId: 2223,
